# week14_inheritance_exercise

./: CMakeLists.txt  README.md  catbook.hpp
test/: test_task1.cpp  test_task2.cpp  test_task3.cpp
